--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "morgan": "^1.10.0",
     "multer": "^2.0.1",
     "nodemailer": "^7.0.3",
+    "openai": "^5.12.2",
     "stripe": "^18.3.0",
     "uuid": "^11.1.0"
   }
