--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -12,6 +12,12 @@ jobs:
       # Checkout repo
       - name: Checkout code
         uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+
+      # Debug: List files to verify Dockerfile exists
+      - name: List files
+        run: ls -la
 
       # Setup Docker auth (GitHub Container Registry)
       - name: Log in to GitHub Container Registry
@@ -23,7 +29,7 @@ jobs:
 
       # Build Docker image
       - name: Build Docker image
-        run: docker build -t ghcr.io/budhathokidinesh/ecommerce-client-backend:latest -f Dockerfile .
+        run: docker build -t ghcr.io/budhathokidinesh/ecommerce-client-backend:latest .
 
       # Push Docker image to GHCR
       - name: Push Docker image
