--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -43,7 +43,7 @@ jobs:
 
       # Build Docker image
       - name: Build Docker image
-        run: docker build -t ghcr.io/budhathokidinesh/ecommerce-client-backend:latest -f ./Dockerfile
+        run: docker build -t ghcr.io/budhathokidinesh/ecommerce-client-backend:latest -f "$(pwd)/Dockerfile" .
 
       # Push Docker image to GHCR
       - name: Push Docker image
