--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -9,32 +9,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Checkout repo
+      # Checkout the repository
       - name: Checkout code
         uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
 
-      # Debug: Show exact file structure
-      - name: Debug - Verify files exist
-        run: |
-          echo "Current directory: $(pwd)"
-          echo "=== Listing all files ==="
-          ls -la
-          echo "=== Checking for Dockerfile ==="
-          if [ -f "Dockerfile" ]; then
-            echo "✅ Dockerfile found!"
-            echo "=== Dockerfile content (first 10 lines) ==="
-            head -10 Dockerfile
-          else
-            echo "❌ Dockerfile NOT found!"
-            echo "=== Searching recursively ==="
-            find . -name "Dockerfile*" -type f
-            exit 1
-          fi
-
-      # Setup Docker auth
-      - name: Log in to GitHub Container Registry
+      # Log in to GitHub Container Registry
+      - name: Log in to GHCR
         uses: docker/login-action@v2
         with:
           registry: ghcr.io
@@ -43,7 +23,7 @@ jobs:
 
       # Build Docker image
       - name: Build Docker image
-        run: docker build -t ghcr.io/budhathokidinesh/ecommerce-client-backend:latest -f "$(pwd)/Dockerfile" .
+        run: docker build -t ghcr.io/budhathokidinesh/ecommerce-client-backend:latest -f Dockerfile .
 
       # Push Docker image to GHCR
       - name: Push Docker image
