--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -47,6 +47,7 @@ jobs:
 
             # Run container
             docker run -d -p 8001:8000 \
+              -e OPENAI_API_KEY=$OPENAI_API_KEY \
               -e MONGO_URL=$MONGO_URL \
               -e STRIPE_SECRET_KEY=$STRIPE_SECRET_KEY \
               -e STRIPE_WEBHOOK_SECRET=$STRIPE_WEBHOOK_SECRET \
